WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294257
[Clang] Fix build after
295921@main
https://bugs.webkit.org/show_bug.cgi?id=294257
Summary
[Clang] Fix build after 295921@main
Vitaly Dyackhov
Reported
2025-06-10 06:55:08 PDT
``` WebKit/Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:3053:3: error: 'suppress' attribute only applies to variables and statements 3053 | [[clang::suppress]] | ^ ```
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2025-06-10 07:36:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46544
EWS
Comment 2
2025-06-11 09:43:43 PDT
Committed
296092@main
(5894deb77562): <
https://commits.webkit.org/296092@main
> Reviewed commits have been landed. Closing PR #46544 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-06-11 09:53:27 PDT
<
rdar://problem/153092851
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug