[Clang] Fix build after 295921@main https://bugs.webkit.org/show_bug.cgi?id=294257

Reviewed by Darin Adler.

clang 18 doesn't support `suppress` attribute on functions.

Fixed by adding a new `IGNORE_CLANG_STATIC_ANALYZER_WARNINGS_ATTRIBUTE_ON_FUNCTION`
macro, which is only enabled with clang >= 19,
similar to `IGNORE_CLANG_STATIC_ANALYZER_WARNINGS_ATTRIBUTE_ON_MEMBER`.

* Source/WTF/wtf/Compiler.h:
* Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:

Canonical link: https://commits.webkit.org/296092@main